--- a/index.css
+++ b/index.css
@@ -13,20 +13,23 @@
   --gray_color: rgb(118, 119, 134);
 }
 
-header {
+.header {
   display: flex;
-  gap: 1rem;
-  padding: 1rem;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-}
-
-header nav {
-  display: flex;
-
+  justify-content: space-between;
   gap: 1rem;
+  position: relative;
+  height: 40vh;
+  padding-inline: 10%;
 }
+
+header h1 {
+  z-index: 20;
+  width: 100%;
+  padding-inline: 12%;
+}
+
 header a {
   font-size: 1.5rem;
   text-decoration: none;
@@ -37,6 +40,26 @@ header a {
   box-shadow: 5px 5px var(--gray_color);
 }
 
+header .page-title {
+  background-color: black;
+  color: white;
+  z-index: 200;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-inline: 10%;
+  position: relative;
+  padding-block: 0.5rem;
+}
+
+header .page-title img {
+  height: 6rem;
+  width: 6rem;
+  position: absolute;
+  right: 10%;
+  background-color: black;
+}
 header a.active-page {
   background-color: var(--green_color);
 }
@@ -56,9 +79,15 @@ body {
 main {
   width: 100vw;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+main > div {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  gap: 4rem;
 }
 
 main h2 {
@@ -69,12 +98,24 @@ main h2 {
   font-size: 2rem;
 }
 
+aside {
+  flex-basis: 20%;
+  padding-block: 2rem;
+}
+
+aside nav {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 .hero-image {
+  position: absolute;
+
   width: 80%;
   height: 40vh;
   object-fit: cover;
   object-position: top;
-  border: solid 2px black;
 }
 
 .content {
@@ -83,7 +124,7 @@ main h2 {
   gap: 6rem;
   font-size: 1.5rem;
   padding: 0.5rem;
-  width: 80%;
+  flex-basis: 80%;
   margin: auto;
 }
 
