--- a/index.css
+++ b/index.css
@@ -22,15 +22,16 @@
   position: relative;
   height: 40vh;
   padding-inline: 10%;
+  margin-bottom: 2rem;
 }
 
-header h1 {
+.header h1 {
   z-index: 20;
   width: 100%;
   padding-inline: 12%;
 }
 
-header a {
+.header a {
   font-size: 1.5rem;
   text-decoration: none;
   background-color: var(--blue_color);
@@ -40,7 +41,7 @@ header a {
   box-shadow: 5px 5px var(--gray_color);
 }
 
-header .page-title {
+.header .page-title {
   background-color: black;
   color: white;
   z-index: 200;
@@ -53,21 +54,21 @@ header .page-title {
   padding-block: 0.5rem;
 }
 
-header .page-title img {
+.header .page-title img {
   height: 6rem;
   width: 6rem;
   position: absolute;
   right: 10%;
   background-color: black;
 }
-header a.active-page {
+.header a.active-page {
   background-color: var(--green_color);
 }
 
-header a:hover {
+.header a:hover {
   background-color: var(--blue_color_dark);
 }
-header a.active-page:hover {
+.header a.active-page:hover {
   background-color: var(--green_color_dark);
 }
 
@@ -77,6 +78,7 @@ body {
 }
 
 main {
+  min-height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
@@ -99,6 +101,8 @@ main h2 {
 }
 
 aside {
+  position: relative;
+  height: 100vh;
   flex-basis: 20%;
   padding-block: 2rem;
 }
@@ -140,16 +144,137 @@ aside nav {
   list-style-type: none;
 }
 
+.footer {
+  height: 20vh;
+  padding-inline: 10%;
+  overflow: hidden;
+}
+
+.footer-content {
+  position: relative;
+  overflow: hidden;
+  background-color: #31303099;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.footer-content a {
+  z-index: 200;
+  color: aliceblue;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+.footer-bg {
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  filter: blur(5px);
+}
+
+.rules-content.content {
+  flex-direction: column;
+  padding-block: 1rem;
+}
+
+.rules-content.content header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 1.5rem;
+}
+.rules-content.content header span {
+  font-size: 1rem;
+}
+.rules {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.rules h3 {
+  text-transform: uppercase;
+}
+.indented {
+  text-indent: 30px;
+}
+ul li,
+ol li {
+  margin-left: 1rem;
+  margin-block: 0.5rem;
+}
+.letter-list {
+  list-style-type: lower-latin;
+}
+.circle-list {
+  list-style-type: circle;
+}
+
+.italic {
+  font-style: italic;
+}
+
+table {
+  border: solid red 2px;
+}
+td {
+  border: solid red 2px;
+}
+tr {
+  border: solid red 2px;
+}
+
+.schedulle-content {
+  flex-direction: column;
+}
+.schedulle-content header h2 {
+  align-self: center;
+  border: none;
+}
+.schedulle-content header {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.schedulle-content header p {
+  font-size: 1rem;
+}
+
+.schedulle-content .additional-data {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.schedulle-content .additional-data p {
+  font-size: 1rem;
+}
+.schedulle-content .additional-data p span {
+  font-weight: bold;
+}
+
+.schedulle-content .additional-data div {
+  display: flex;
+  justify-content: space-between;
+}
+
 @media only screen and (min-width: 600px) {
-  header {
+  /* .header {
     display: flex;
     align-items: baseline;
     justify-content: space-around;
     gap: 0;
     padding: 0;
     flex-direction: row;
-  }
-  header nav {
+  } */
+  .header nav {
     transform: translateY(50%);
   }
 }
